== 0.2.7 2009-01-28
* 2 minor fixes, 1 minor enhancement
  * fixed undefined method add_node for nil class error that occasionally happened (juliocesar)
  * Handle nil or unexpected values better when typecasting. (Brian Landau)
  * More robust handling of mime types (Alex Vollmer)

== 0.2.6 2009-01-05
* 1 minor bug fix
  * added explicit require of time as Time#parse failed outside of rails (willcodeforfoo)
  
== 0.2.5 2009-01-05
* 1 major enhancement
  * Add command line interface to HTTParty (Alex Vollmer)
  
== 0.2.4 2008-12-23
* 1 bug fix
  * Fixed that mimetype detection was failing if no mimetype was returned from service (skippy)
== 0.2.3 2008-12-23
* 1 bug fix
  * Fixed typecasting class variable naming issue

== 0.2.2 2008-12-08
* 1 bug fix
  * Added the missing core extension hash method to_xml_attributes

== 0.2.1 2008-12-08
* 1 bug fix
  * Fixed that HTTParty was borking ActiveSupport and as such Rails (thanks to Rob Sanheim)

== 0.2.0 2008-12-07
* 1 major enhancement
  * Removed ActiveSupport as a dependency. Now requires json gem for json deserialization and uses an included class to do the xml parsing.

== 0.1.8 2008-11-30
* 3 major enhancements
  * Moved base_uri normalization into request class and out of httparty module, fixing 
    the problem where base_uri was not always being normalized.
  * Stupid simple support for HTTParty.get/post/put/delete. (jqr)
  * Switched gem management to Echoe from newgem.

== 0.1.7 2008-11-30
* 1 major enhancement
  * fixed multiple class definitions overriding each others options
  
== 0.1.6 2008-11-26
* 1 major enhancement
  * now passing :query to set_form_data if post request to avoid content length errors
  
== 0.1.5 2008-11-14
* 2 major enhancements
  * Refactored send request method out into its own object.
  * Added :html format if you just want to do that.
  
== 0.1.4 2008-11-08
* 3 major enhancements:
  * Removed some cruft