@@ -1,8 +1,10 @@
 == 0.2.7 2009-01-28
-* 2 minor fixes, 1 minor enhancement
+* 2 minor fixes, 1 minor enhancement, 2 major enhancements
   * fixed undefined method add_node for nil class error that occasionally happened (juliocesar)
   * Handle nil or unexpected values better when typecasting. (Brian Landau)
   * More robust handling of mime types (Alex Vollmer)
+  * Added first class response object that includes original body and status code (Alex Vollmer)
+  * Now parsing all response types as some non-200 responses provide important information, this means no more exception raising (Alex Vollmer)
 
 == 0.2.6 2009-01-05
 * 1 minor bug fix
